# MusicBrainz-libdiscid

./: .gitignore  .travis.yml  README.md
MusicBrainz-libdiscid/: MusicBrainz-libdiscid.cabal
MusicBrainz-libdiscid-test/: MusicBrainz-libdiscid-test.cabal
MusicBrainz-libdiscid-test/src/: Main.hs
MusicBrainz-libdiscid/libdiscid/include/: config.h
MusicBrainz-libdiscid/libdiscid/include/discid/: discid.h
MusicBrainz-libdiscid/src/MusicBrainz/: DiscId.hs
MusicBrainz-libdiscid/src/Sound/MusicBrainz/: DiscId.hs
