name: MusicBrainz-libdiscid-test
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable MusicBrainz-libdiscid-test
    build-depends: MusicBrainz-libdiscid -any, base -any,
                   pretty-show -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 